--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Block.cs" />
     <Compile Include="CollidableSprite.cs" />
     <Compile Include="CollisionLayer.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="MoveableSprite.cs" />
     <Compile Include="Paddle.cs" />
