Block types for scoring
Added blocks types in order to calculate various scores. Integer for
score displayed on screen.

--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Ball.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="BlockType.cs" />
     <Compile Include="CollidableSprite.cs" />
     <Compile Include="CollisionLayer.cs" />
     <Compile Include="Extensions.cs" />
