--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -111,6 +111,7 @@
     <Compile Include="BlockType.cs" />
     <Compile Include="CollidableSprite.cs" />
     <Compile Include="CollisionLayer.cs" />
+    <Compile Include="Destroy.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="MoveableSprite.cs" />
