--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Destroy.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="MaxBlocks.cs" />
     <Compile Include="MoveableSprite.cs" />
     <Compile Include="Paddle.cs" />
     <Compile Include="Powerup.cs" />
