First Cut at High Scores Tracking and Display

--- a/CosmicBreakout/CosmicBreakout.csproj
+++ b/CosmicBreakout/CosmicBreakout.csproj
@@ -95,6 +95,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HighScores.xaml.cs">
+      <DependentUpon>HighScores.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GamePadTest.xaml.cs">
       <DependentUpon>GamePadTest.xaml</DependentUpon>
     </Compile>
@@ -140,6 +143,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="HighScores.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="GamePadTest.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
