--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Ball.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="BlockType.cs" />
+    <Compile Include="ScoreData.cs" />
     <Compile Include="CollidableSprite.cs" />
     <Compile Include="CollisionLayer.cs" />
     <Compile Include="Destroy.cs" />
