Scaled to full screen. All powerups working. Started moving magic numbers into static classes.

--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -121,6 +121,8 @@
     <Compile Include="PowerupType.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpriteSheet.cs" />
+    <Compile Include="GameSprite.cs" />
     <Compile Include="Wall.cs" />
     <EmbeddedResource Include="Properties\GameObjects.rd.xml" />
   </ItemGroup>
